--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ button {
     border-radius: 50%;
     padding: 32px;
     font-size: 1em;
+    font-weight: bold;
     height: 6rem;
     width: 6rem;
     background-color: orange;
@@ -30,7 +31,7 @@ button {
 }
 
 .display {
-    border: 5px solid black;
+    color: white;
     border-radius: 20px;
     background-color: black;
     display: inline-flex;
@@ -41,19 +42,26 @@ button {
     padding: 32px;
 }
 
-.output {
+#output {
     border: 5px solid white;
     border-radius: 10px;
     color: white;
-    padding: 8px;
+    padding: 16px;
     min-width: 100%;
     display: flex;
     flex-direction: row-reverse;
-    font-size: 32px;
+    font-size: 48px;
+    box-sizing: border-box;
 }
 
 .buttons {
     display: flex;
+    gap: 8px;
+}
+
+.left {
+    display: flex;
+    flex-direction: column;
     gap: 8px;
 }
 
