--- a/style.css
+++ b/style.css
@@ -4,18 +4,38 @@
     font-style: normal;
     font-weight: 100px;
 }
-
+html {
+    width: 100%;
+    height: 100%;
+}
 body {
     font-family: Helvetica;
     font-size: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     margin: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #EEF2FF;
 }
 
 .header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
     font-family: roboto;
+    padding: 0 32px 32px 32px;
+    background-color: #CDDEFF;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.header p {
+    margin: 0;
 }
 
 button {
@@ -96,3 +116,12 @@ button:active{
     gap: 8px;
 }
 
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 16px;
+    background-color: #CDDEFF;
+    width: 100%;
+    box-sizing: border-box;
+}
