updated styling for footer link

--- a/style.css
+++ b/style.css
@@ -125,3 +125,8 @@ button:active{
     width: 100%;
     box-sizing: border-box;
 }
+
+.footer a {
+    text-decoration: none;
+    color: black;
+}
